@@ -1,3 +1,2 @@
-#!/usr/bin/env runhaskell
 import Distribution.Simple
 main = defaultMain
