@@ -2,8 +2,9 @@ pandoc (0.44) unstable; urgency=low
 
   [ Recai Oktaş ]
 
-  * Use ./Setup.hs instead of runhaskell, which, on some platforms (such as
-    s390, alpha, m68k), throws the following error:
+  * On configure, compile 'Setup.hs' to 'setup' and use 'setup' as the build
+    command instead of 'runhaskell', which, on some platforms (such as s390,
+    alpha, m68k), throws the following error:
 
         runhaskell Setup.hs configure --prefix=/usr
         ghc-6.6.1: not built for interactive use
